--- a/ubah-alamat-pabrik.html
+++ b/ubah-alamat-pabrik.html
@@ -139,7 +139,7 @@
       <div class="container-fluid">
           <div aria-label="breadcrumb" class="row">
           <ol class="breadcrumb">
-              <li class="breadcrumb-item text-green">Profil Pabrik</li>
+              <li class="breadcrumb-item text-green"><a href="profil-pabrik.html">Profil Pabrik</a></li>
               <li class="breadcrumb-item active" aria-current="page">Ubah Data Profil Pabrik</li>
           </ol>
           </div>
